# UnitedUChicago2025Hackathon

./: .gitignore  A2A_v2_COMPLETE.md  A2A_v2_README.md  README.md  README_UNITED_DEMAND.md  async_test_navigate.py  create_a2a_v2.sh  data.ipynb  data_processing.py  g_trends_scraper.py  google_news.py  mcp.json  mcp_config_updated.json  mcp_trial.py  oil_prices.db  pyproject.toml  requirements.txt  setup.py  test_navigate.py  write_db.py
A2A_v2/: README.md  diagnostic_test.py  quick_test.py  requirements.txt  test_google_trends.py  verify_setup.py
MCP_ds/: mcp_server.py  oil_mcp_client_v1.py  oil_prices.db
UI/: UI_v1.py
a2a_mcp-example/: README_ENHANCED.md  SETUP_GUIDE.md
archive_m/: check_db.py
exploration/: mcp_main_script.py
google_trends_downloads/: demonstration_geo_2025-06-18.csv  demonstration_quer_2025-06-18.csv  demonstration_time_2025-06-18.csv  march_geo_2025-06-18.csv  march_quer_2025-06-18.csv  march_time_2025-06-18.csv  protest_geo_2025-06-18.csv  protest_quer_2025-06-18.csv  protest_time_2025-06-18.csv  rally_geo_2025-06-18.csv  rally_quer_2025-06-18.csv  rally_time_2025-06-18.csv  riot_ents_2025-06-18.csv  riot_geo_2025-06-18.csv  riot_time_2025-06-18.csv  united_airlines_geo_2025-06-18.csv  united_airlines_quer_2025-06-18.csv  united_airlines_time_2025-06-18.csv
hackathonfinal-main/: CLAUDE.md  FLIGHT_SQL_INTEGRATION.md  package-lock.json  package.json  pyproject.toml  start_system.sh  start_ui.py  stop_system.sh
hackathonfinal-main/mcp_servers/aviation_weather_server/: aviation_weather_server_stdio.py  pyproject.toml
hackathonfinal-main/mcp_servers/flight_sql_server/: __init__.py  explore_data.py  flight_sql_server_stdio.py  pyproject.toml  test_db.py  test_mcp_server.py
hackathonfinal-main/mcp_servers/playwright_server/: playwright_server.py  playwright_server_stdio.py  pyproject.toml
mcp_project/: __init__.py  claude_interaction_example.py  mcp_server.py  oil_mcp_client.py  test_csv_downloader.py  test_trends_tools.py  (+2 more)
(+184 files in other folders)
