[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp_trends_server"
version = "0.1.0"
description = "Custom MCP Playwright server with Google Trends tools."
dependencies = [
    "fastmcp",
    "playwright",
    "pandas"
]

[project.scripts]
playwright-trends-server = "mcp_project.playwright.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_project*"]
exclude = ["archive*", "scrapers*"] 