[project]
name = "aviation-weather-server"
version = "0.1.0"
description = "MCP server for aviation weather information (METARs, TAFs, PIREPs)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["aviation_weather_server_stdio.py"]