[project]
name = "playwright-server"
version = "0.1.0"
description = "MCP server for browser automation using Playwright"
requires-python = ">=3.11"
dependencies = [
    "mcp>=0.9.0",
    "playwright>=1.40.0",
    "fastmcp>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["playwright_server.py", "playwright_server_stdio.py"]
